<resources>
    <string name="app_name">IMDb Demo</string>

    <string name="topRating">Top Rating</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="upComing">Up Coming</string>
    <string name="language">Language:</string>
    <string name="release_date">Release Date:</string>
    <string name="overview">Overview:</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="personal_info">Personal Info</string>
    <string name="known_for">known For:</string>
    <string name="gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="place_of_birth">Place of Birth:</string>
    <string name="biography">Biography</string>
    <string name="no_results_found">No Results Found</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
</resources>