<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.personDetails.PersonFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/personImage"
            android:layout_width="150dp"
            android:layout_height="185dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="1:1"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/personImage"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:textSize="22sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/knownFor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/personImage"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/known_for"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/knownForResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/knownFor"
            app:layout_constraintTop_toBottomOf="@id/name"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/personImage"
            app:layout_constraintTop_toBottomOf="@id/knownFor"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/gender"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/genderResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/gender"
            app:layout_constraintTop_toBottomOf="@id/knownForResult"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/birthday"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/personImage"
            app:layout_constraintTop_toBottomOf="@id/gender"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/birthday"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/birthdayResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/birthday"
            app:layout_constraintTop_toBottomOf="@id/genderResult"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/placeOfBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/personImage"
            app:layout_constraintTop_toBottomOf="@id/birthday"
            android:layout_marginStart="15dp"
            android:layout_marginTop="12dp"
            android:text="@string/place_of_birth"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/placeOfBirthResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/personImage"
            app:layout_constraintTop_toBottomOf="@id/placeOfBirth"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="3dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/personImage"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:text="@string/biography"
            android:textStyle="bold"
            android:textSize="18sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/bioResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bio"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>